scripts/V2/02_Func_Reconstruction/memory-bank/activeContext.md
# Active Context: RAW_2_MAT Refactoring - COMPLETED

> **Note**: This documentation reflects the completed refactoring work. The folder has been reorganized to `02_Functional_Reconstruction/` with sample data in `sample_data/`. All references have been updated.

## Current Status: ✅ PROJECT COMPLETE

**Date**: December 8, 2025
**Task**: Refactor monolithic RAW_2_MAT.m into modular, configurable pipeline
**Result**: Successfully completed and tested
**Current Location**: `02_Functional_Reconstruction/`

## What Was Accomplished

### 1. Complete Refactoring
Transformed 493-line monolithic script into:
- **Main script**: `do_reconstruct_functional.m` (~80 lines)
- **15 modular functions** organized in 6 categories
- **JSON configuration** per experiment
- **Clear terminal feedback** throughout processing

### 2. Successful Testing
Pipeline tested on run-115047-func sample data:
- ✅ PDI.mat successfully created
- ✅ 1842 frames processed
- ✅ 20 visual stimulation events extracted
- ✅ Running wheel + G-sensor data loaded
- ✅ TTL timing synchronized
- ✅ Graceful handling of missing IQ/RF files

### 3. Bugs Fixed During Testing
1. **Lag correction error handling** - Enhanced to suppress warnings and inform user
2. **detect_ttl_edges bug** - Fixed to return indices instead of times
3. **DAQ column names** - Changed Var1(1) to time(1) in 3 files

## Key Improvements Over Original

### Configuration
- **Before**: TTL channels hardcoded in script
- **After**: JSON config file per experiment
- **Benefit**: No code changes needed for different setups

### Modularity
- **Before**: One 493-line function
- **After**: 15 focused functions in organized folders
- **Benefit**: Easy to test, modify, and extend

### User Experience
- **Before**: Silent processing or cryptic errors
- **After**: Clear progress indicators and helpful error messages
- **Benefit**: Users know exactly what's happening

### Maintainability
- **Before**: Hard to locate and modify specific functionality
- **After**: Each function has single responsibility
- **Benefit**: Changes isolated to specific modules

## File Structure

```
02_Functional_Reconstruction/
├── do_reconstruct_functional.m        # Main script (RAW_2_MAT function)
├── experiment_config_template.json    # Configuration template
├── README.md                          # User documentation
├── memory-bank/                       # Documentation (6 files)
│   ├── projectbrief.md
│   ├── techContext.md
│   ├── systemPatterns.md
│   ├── productContext.md
│   ├── progress.md
│   └── activeContext.md
├── OLD_VERSION_ONE_SCRIPT/           # Original monolithic script
│   ├── RAW_2_MAT.m
│   └── RAW_2_MAT_TECH_DOCUMENT.md
├── src/                              # Modular functions (15 total)
│   ├── assembly/                     # Structure building (2)
│   ├── events/                       # Event extraction (4)
│   ├── io/                           # File loading (2)
│   ├── processing/                   # Signal processing (1)
│   ├── sync/                         # Timeline sync (1)
│   └── utils/                        # Utilities (5)
└── sample_data/                      # Test data
    ├── Data_collection/
    │   └── run-115047-func/
    │       ├── experiment_config.json
    │       ├── DAQ.csv, TTL*.csv
    │       ├── VisualStimulation.csv
    │       ├── RunningWheel.csv, GSensor.csv
    │       └── FUSI_data/
    └── Data_analysis/                # Created during processing
        └── run-115047-func/
            └── PDI.mat
```

## Usage

```matlab
% Navigate to the refactored pipeline directory
cd 02_Functional_Reconstruction

% Run with sample data
PDI = do_reconstruct_functional('sample_data/Data_collection/run-115047-func');

% With dialog to select folder
PDI = do_reconstruct_functional();
```

## Next Steps (Optional)

The core refactoring is complete and tested. Optional enhancements:

1. **Documentation updates** - Update README with do_reconstruct_functional name
2. **Migration guide** - Help users transition from old to new pipeline
3. **Batch processing** - Example script for processing multiple runs
4. **Unit tests** - Test individual modules

## Important Notes

### Configuration Required
Each experiment needs an `experiment_config.json` in its data folder. Template available at root:
```json
{
  "experiment_id": "run-XXXXX-func",
  "date": "YYYY-MM-DD",
  "ttl_channels": {
    "pdi_frame": 3,
    "experiment_start": 6,
    "experiment_start_fallback": 5,
    "visual": 10
  }
}
```

Sample config: `sample_data/Data_collection/run-115047-func/experiment_config.json`

### Auto-Detection
The pipeline automatically detects:
- Stimulation files (ShockStimulation.csv, VisualStimulation.csv, auditoryStimulation.csv)
- Behavioral data (RunningWheel.csv, GSensor.csv, flir_camera_time.csv)
- Missing data handled gracefully with clear messages

### Output
- Saves to `Data_analysis/` directory (mirrors Data_collection structure)
- For sample data: `sample_data/Data_analysis/run-115047-func/PDI.mat`
- PDI.mat format identical to original
- All processing algorithms preserved

## Technical Insights

### Design Patterns
- **Graceful degradation**: Warn but continue for optional data
- **Dual-source resolution**: TTL first, CSV fallback
- **Config-driven**: Behavior controlled by JSON, not code
- **Auto-detection**: File presence determines processing

### Bug Fixes Learning
1. **Edge detection must return indices** for array indexing
2. **Table column names vary** - handle robustly
3. **Missing IQ/RF files are normal** - not an error condition

## Project Status: READY FOR PRODUCTION ✅

The refactored pipeline is:
- ✅ Fully functional
- ✅ Tested on real data
- ✅ Documented
- ✅ Ready for daily use

**No further development required unless optional enhancements desired.**
